fixed some spacing

--- a/full-article.css
+++ b/full-article.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     background: linear-gradient(#537C8D, #243048);
     background-repeat: no-repeat;
+    font-family: "MedievalSharp", cursive;
 }
 
 .title {
