--- a/index.css
+++ b/index.css
@@ -3,17 +3,23 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0;
     padding: 0;
     background: linear-gradient(#537C8D, #243048);
     background-repeat: no-repeat;
+    font-family: "MedievalSharp", cursive;
+    height: 100vh;
+    /* justify-content: space-between; */
 }
 
 /* Header */
 
 .site-header {
     background: #94B5C2 url("/images/solitude-far2.jpg");
-    background-position: center;
+    background-position: bottom;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -22,26 +28,42 @@ body {
     max-width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
-    height: 400px;
+    height: 200px;
+    font-size: .25rem;
 }
 
 .title {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    margin-top: 1em;
     margin-bottom: auto;
     width: 100%;
-    padding: 0 1em;
-
+    font-size: .8rem;
+    color: #243048;
+    padding: 0em 1em;
 }
 
-.logo {
+/* .logo {
     object-fit: cover;
     width: 34px;
     height: 34px;
+} */
+
+.title h1 {
+    font-size: .9rem;
+}
+
+.title nav {
+    font-size: .6rem;
+}
+
+.title p {
+    font-size: 1.5rem;
+    /* padding-right: 1em; */
 }
 
 nav {
-    display: inline-block;
     margin-left: auto;
 }
 
@@ -50,7 +72,13 @@ ul {
 }
 
 .header-text {
+    font-size: .5rem;
     margin-top: auto;
+    margin-bottom: 0;
+    /* background: #A4C0CB;
+    border: 1px solid #243048; */
+    padding: 0.5em;
+    color: white;
 }
 
 /* Main */
@@ -67,70 +95,71 @@ ul {
     grid-area: 3;
 }
 
-main {
+/* main {
     margin: 1em;
     display: grid;
     gap: 1em;
-    grid-template-columns: 1fr;
+    grid-template-columns: 3fr / 1fr;
     grid-template-areas: 
         "1"
         "2"
         "3";
-}
+    width: 100%;
+} */
 
-
-
-/* Medium */
-
-@media(min-width: 500px) {
-    main {
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-            "1 1"
-            "2 2"
-            "3 3";
-    }
-}
-
-
-
-
-/* Large */
-
-@media(max-width: 870px) {
-    main {
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-areas: 
-            ". 1 1 2 ."
-            ". 3 3 2 .";
-    }
+main {
+    display: flex;
+    padding: 1em;
+    gap: 1em;
+    flex-wrap: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 90%;
 }
 
 
 /* Article Card */
 
 article {
-    /* display: flex;
-    flex-direction: column; */
+    display: flex;
     border-radius: 0.2em;
     background-color: #e5e5e5;
-    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+article h3 {
+    padding: 0 0 .75em 0;
+    font-size: 1.5em;
 }
 
 .article-header {
+    font-size: .7rem;
     width: 100%;
-    padding: 1em;
+    padding: 0 1em;
+    line-height: 1em;
+    align-items: center;
 }
 
-
-
-/* Images */
+article p {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 article img {
+    display: block;
     width: 100%;
     border-top-left-radius: .2em;
     border-top-right-radius: .2em;
     object-fit: cover;
+    align-self: flex-start;
+    height: 60%;
 }
 
 
@@ -143,4 +172,107 @@ footer {
     align-items: center;
     background: #202020;
     color: white;
+    margin-top: auto;
+    margin-bottom: 0;
+    padding: 1.5em;
+    width: 100%;
+}
+
+footer h4 {
+    padding-bottom: 0.5em;
+}
+
+
+
+/* Media Queries */
+
+
+/* Medium */
+
+@media(min-width: 450px) and (max-width:869px) {
+    /* main {
+        grid-template-columns: 1fr 1fr / 1fr 1fr;
+        grid-template-areas: 
+            "1 2"
+            "3 3";
+    } */
+    /* .title {
+        background: #A4C0CB;
+        border: 2px solid #243048;
+    }
+    .site-header {
+        background-position: center center;
+    }*/
+    article {
+        flex: 1 20em;
+    }
+    .site-header {
+        background-color: #94B5C2;
+        background-repeat: repeat;
+        width: 100%;
+    }
+
+    .title {
+        background: #A4C0CB;
+        border: 1.5px solid #243048;
+        width: 50%;
+        font-size: .8rem;
+        color: #243048;
+        padding: 0.25em 1em;
+        margin-top: 0.3em;
+        margin-bottom: auto;
+    }
+}
+
+/* Large */
+
+@media(min-width: 870px) and (max-width: 1500px) {
+    /* main {
+        grid-template-columns: 1fr 1fr / repeat(5, 1fr);
+        grid-template-areas: 
+            ". 1 1 2 ."
+            ". 3 3 2 .";
+    } */
+/* 
+    .site-header {
+        background: #94B5C2 url("/images/solitude-far2.jpg");
+        background-position: center center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        max-width: 100%;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 400px;
+    } */
+
+    .site-header {
+        background-color: #94B5C2;
+        background-repeat: repeat;
+        width: 100%;
+    }
+
+    .title {
+        background: #A4C0CB;
+        border: 1.5px solid #243048;
+        width: 35%;
+        font-size: .8rem;
+        color: #243048;
+        padding: 0.25em .5em;
+        margin-top: 0.em;
+        margin-bottom: auto;
+    }
+    
+    article {
+        flex: 1 2;
+    }
+}
+
+
+
+h1, h2, h3, h4, p, nav, li, ul {
+    margin: 0;
+    padding: 0;
 }
